2011-03-23  Reinhard Max  <max@suse.de>

	* tkchat.tcl (::tkchat::parseStr): Render words of 10..40
	characters as links to fossil artifact IDs on core.tcl.tk.
	
2011-01-06  Reinhard Max  <max@suse.de>

	* askleo/askleo.tcl: Complete the API adjustments and add support
	for running askleo.tcl as a standalone application.

2010-11-16  Reinhard Max  <max@suse.de>

	* askleo/askleo.tcl: Adjust code to the latest API changes on
	http://pda.leo.org and improve the UI.

2010-09-17  Reinhard Max  <max@suse.de>

	* tkchat.tcl (::tkchat::checkCommand):
	A single / at the start of a post is now rejected if it is not a
	known command. To send a literal slash at the beginning of a post,
	it has to be doubled.
	Improved detection and handling of the /tip command.
	 	
2010-01-12  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tkchat.tcl: Do not show the browser fields on the preferences
	page for Windows as we do not use this on that platform.
	* tkchat.tcl: Applied patch 2913790 to add an option not to get
	queried when exiting and enable /quit when not logged in (stu)

2010-01-11  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tkchat.tcl: Fix buggy initialization of the browser list
	when nothing specified. Problem spotted by ferrieux.

2009-12-13  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tkchat.tcl: [wm state] doesn't support zoomed on x11.
	* tkchat.tcl: change web browser handling to look for a more
	modern list of commands and avoid the old -remote stuff.

2009-10-15  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tkchat.tcl: Fix typo spotted by mistachkin.

2009-09-24  Reinhard Max  <max@suse.de>

	* tkchat.tcl (::tkchat::Smile): Unset IMGre before reinitializing
	the emoticons, or it will keep growing. Only reinitialize when it
	was explicitly asked for (i.e. not on re-logins).

2009-08-12  Elchonon Edelson <eee@users.sourceforge.net>

	* tkchat.tcl: Fix [Bug 2814771]. In color configuration dialog,
	the wrong row was being given the weight for resize.
